code to add up mass and mass tracers leaving computational domain on external boundary
--HG--
branch : week-of-code

--- a/.hgignore
+++ b/.hgignore
@@ -25,6 +25,7 @@ temp.show-*
 Make.config.machine
 Make.config.override
 *.mod
+*.orig
 
 src/mpgrafic/degraf/Makefile
 src/mpgrafic/degraf/config.h
