created new config and ifdef for individual star methods. currently this only houses changes to rebuild hierarchy and depost must refine particles routines associated with individual stars. nothing else. these changes are here to allow must refine across processors, but is untested. compiles and works fine with individualstars-no. testing -yes now
--HG--
branch : week-of-code

--- a/src/enzo/Make.config.settings
+++ b/src/enzo/Make.config.settings
@@ -42,6 +42,7 @@
 #    CONFIG_SET_ACCELERATION_BOUNDARY
 #    CONFIG_ENZO_PERFORMANCE
 #    CONFIG_GRACKLE
+#    CONFIG_INDIVIDUALSTAR
 #
 #=======================================================================
 
@@ -332,3 +333,12 @@
 #----------------------------------------------------------------------- 
  
      CONFIG_LOG2ALLOC = no
+
+#=======================================================================
+# CONFIG_INDIVIDUALSTAR
+#=======================================================================
+#    yes           Compile with individual star particles methods
+#    no            Compile without individual star particles methods
+#-----------------------------------------------------------------------
+
+     CONFIG_INDIVIDUALSTAR = no
