--- a/src/enzo/Make.config.settings
+++ b/src/enzo/Make.config.settings
@@ -43,6 +43,7 @@
 #    CONFIG_ENZO_PERFORMANCE
 #    CONFIG_GRACKLE
 #    CONFIG_INDIVIDUALSTAR
+#    CONFIG_MEMORYPOOL
 #
 #=======================================================================
 
@@ -342,3 +343,13 @@
 #-----------------------------------------------------------------------
 
      CONFIG_INDIVIDUALSTAR = no
+
+#=======================================================================
+# CONFIG_MEMORYPOOL
+#=======================================================================
+#    yes           Compile with memory pooling in photon packages
+#    no            Compile without memory pooling in photon packages
+#-----------------------------------------------------------------------
+
+     CONFIG_MEMORYPOOL = no
+
