Swap out auto_show_compile_options for WriteConfigure.

--- a/src/enzo/Make.config.targets
+++ b/src/enzo/Make.config.targets
@@ -300,14 +300,14 @@ suggest-clean:
 
 show-version:
 	@echo
-	@echo "Mercurial Branch   `$(SVN) identify -b`"
-	@echo "Mercurial Revision `$(SVN) identify -i`"
+	@echo "Git Branch   `git rev-parse --abbrev-ref HEAD`"
+	@echo "Git Revision `git rev-parse HEAD`"
 	@echo
 
 #-----------------------------------------------------------------------
 
 show-diff:
-	@$(SVN) diff
+	@git diff
 
 #-----------------------------------------------------------------------
 .PHONY: default
