--- a/src/enzo/Make.config.settings
+++ b/src/enzo/Make.config.settings
@@ -115,6 +115,15 @@
      CONFIG_USE_MPI = yes
 
 #=======================================================================
+# CONFIG_OPENMP
+#=======================================================================
+#    yes           compile with OpenMP
+#     no           don't compile with OpenMP
+#-----------------------------------------------------------------------
+
+     CONFIG_OPENMP = no
+
+#=======================================================================
 # CONFIG_OBJECT_MODE
 #=======================================================================
 #    32            compile using 32-bit object format
