Patching in last few changes
--HG--
branch : cjmp

--- a/src/enzo/Make.config.settings
+++ b/src/enzo/Make.config.settings
@@ -19,6 +19,7 @@
 #    CONFIG_INITS
 #    CONFIG_IO
 #    CONFIG_USE_MPI
+#    CONFIG_USE_OPENMP
 #    CONFIG_OBJECT_MODE
 #    CONFIG_TASKMAP
 #    CONFIG_PACKED_AMR
