updated fetching of tags, removed --time-multiplier from test runner

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,7 @@ commands:
           echo 'export ENZOTEST_DIR=$HOME/enzo_test' >> $BASH_ENV
           echo 'export ANSWER_NAME="push_suite"' >> $BASH_ENV
           echo 'export HYPRE=hypre-2.11.2' >> $BASH_ENV
-          # tag the tip so we can go back to it
-          git fetch --tags origin
-          # also get tags from the main repository (for the current gold standard)
+          # get tags from the main repository (for the current gold standard)
           git fetch --tags https://github.com/enzo-project/enzo-dev
           git tag tip
 
@@ -97,7 +95,7 @@ commands:
             make clean
             make -j 4
             cd ../../run
-            python ./test_runner.py --suite=push -o $ENZOTEST_DIR --answer-name=$ANSWER_NAME --local --strict=high --verbose --time-multiplier=2 << parameters.flags >>
+            python ./test_runner.py --suite=push -o $ENZOTEST_DIR --answer-name=$ANSWER_NAME --local --strict=high --verbose << parameters.flags >>
           fi
 
   build-docs:
