--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,16 +187,16 @@ jobs:
 
       - restore_cache:
           name: "Restore test answers."
-          key: test-answers-v12a
+          key: test-answers-v13
 
       - build-and-test:
-          tag: gold-standard-v12
+          tag: gold-standard-v13
           skipfile: ~/enzo_test/push_suite/push_suite
           flags: --answer-store
 
       - save_cache:
           name: "Save test answers cache."
-          key: test-answers-v12a
+          key: test-answers-v13
           paths:
             - ~/enzo_test/push_suite
 
