--- a/src/enzo/Make.config.settings
+++ b/src/enzo/Make.config.settings
@@ -9,6 +9,7 @@
 #
 #    PARAMETER_MAX_SUBGRIDS
 #    PARAMETER_MAX_BARYONS
+#    PARAMETER_MAX_PARTICLE_ATTR
 #    PARAMETER_MAX_TASKS_PER_NODE
 #
 # Configuration settings
@@ -48,6 +49,7 @@
 
     PARAMETER_MAX_SUBGRIDS       = 100000
     PARAMETER_MAX_BARYONS        = 30
+    PARAMETER_MAX_PARTICLE_ATTR  = 4
     PARAMETER_MAX_TASKS_PER_NODE = 8
     PARAMETER_MEMORY_POOL_SIZE   = 100000
 
