--- a/src/enzo/Make.config.targets
+++ b/src/enzo/Make.config.targets
@@ -28,6 +28,10 @@ help-config:
 	@echo
 	@echo "      gmake max-baryons-###"
 	@echo
+	@echo "  Set maximum number of particle attributes"
+	@echo 
+	@echo "      gmake max-particle-attr-###"
+	@echo
 	@echo "   Set maximum tasks per node"
 	@echo
 	@echo "      gmake max-tasks-per-node-###"
@@ -258,6 +262,7 @@ show-config:
 	@echo
 	@echo "   PARAMETER_MAX_SUBGRIDS  [max-subgrids-###]                : $(PARAMETER_MAX_SUBGRIDS)"
 	@echo "   PARAMETER_MAX_BARYONS  [max-baryons-###]                  : $(PARAMETER_MAX_BARYONS)"
+	@echo "   PARAMETER_MAX_PARTICLE_ATTR [max-particle-attr-###]       : $(PARAMETER_MAX_PARTICLE_ATTR)"
 	@echo "   PARAMETER_MAX_TASKS_PER_NODE  [max-tasks-per-node-###]    : $(PARAMETER_MAX_TASKS_PER_NODE)"
 	@echo "   PARAMETER_MEMORY_POOL_SIZE  [memory-pool-###]             : $(PARAMETER_MEMORY_POOL_SIZE)"
 	@echo
@@ -346,6 +351,15 @@ max-baryons-%: suggest-clean
 	$(MAKE)  show-config | grep PARAMETER_MAX_BARYONS; \
 	echo
 
+#-----------------------------------------------------------------------
+
+max-particle-attr-%: suggest-clean
+	@tmp=.config.temp; \
+	grep -v PARAMETER_MAX_PARTICLE_ATTR $(MAKE_CONFIG_OVERRIDE) > $${tmp}; \
+	mv $${tmp} $(MAKE_CONFIG_OVERRIDE); \
+	echo "PARAMETER_MAX_PARTICLE_ATTR = $*" >> $(MAKE_CONFIG_OVERRIDE); \
+	$(MAKE)  show-config | grep PARAMETER_MAX_PARTICLE_ATTR; \
+	echo
 
 #-----------------------------------------------------------------------
 
