First full cut at revamping stellar yields table to use HDF5 input allowing for a more flexible / general yields. Can more easily change up input yield tables now. However, still need to do a bit of work to restructure yields from the way this was done before. Need to:
1) Define types (wind, SN, PopIII)
2) make sure code consistently picks and interpolates among these types
3) have the generation of the HDF5 yield table handle any stichting
   of yield tables together (i.e. no more winds table and massive star table
   stuff).

4) Need to regenerate old tables in this new form for backwards compatability.
   Not too hard. But bunch of if statements that need to be checked

5) LAST: Need to figure out a way to handle saving yield table indexes
         for wind vs. SN table since its not longer safe to assume they
         will have the same mass and metallicity bins and no longer
         safe to assume they will be the same (but maybe should just
         force code to make them the same...)

--- a/src/enzo/Make.config.settings
+++ b/src/enzo/Make.config.settings
@@ -43,6 +43,7 @@
 #    CONFIG_ENZO_PERFORMANCE
 #    CONFIG_GRACKLE
 #    CONFIG_INDIVIDUALSTAR
+#    CONFIG_NEWYIELDTABLES
 #    CONFIG_MEMORYPOOL
 #
 #=======================================================================
@@ -326,6 +327,16 @@
 #----------------------------------------------------------------------- 
  
      CONFIG_LOG2ALLOC = no
+
+
+#=======================================================================
+# CONFIG_NEWYIELDTABLES
+#=======================================================================
+#     yes          Compile with new yield tables (single HDF5)
+#     no           Use old tables (individual ASCII)
+#-----------------------------------------------------------------------
+
+     CONFIG_NEWYIELDTABLES = no
 
 #=======================================================================
 # CONFIG_INDIVIDUALSTAR
