--- a/src/enzo/Make.config.settings
+++ b/src/enzo/Make.config.settings
@@ -213,7 +213,7 @@
 #    aggressive    Use aggressive optimization
 #-----------------------------------------------------------------------
 
-     CONFIG_OPT = debug
+     CONFIG_OPT = high
 
 #=======================================================================
 # CONFIG_TESTING
