--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ syntax: glob
 *.ipch
 .vscode
 
+run/*
+
 bin/enzo
 bin/inits
 TAGS
@@ -53,6 +55,5 @@ src/enzo/Make.mach.mymac
 src/P-GroupFinder/P-GroupFinder
 
 doc/manual/build
-doc/manual/source/_build
 
 run/results.js
