Many changes to bring tests up to date with yt-4.x
In particular, the field names and the removal of yt.mods.

--- a/run/test_type.py.template
+++ b/run/test_type.py.template
@@ -3,7 +3,7 @@
 ###
 
 import os
-from yt.mods import *
+import numpy as np
 from yt.testing import *
 from yt.utilities.answer_testing.framework import \
     VerifySimulationSameTest, \
