--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -263,6 +263,9 @@ jobs:
       - install-grackle
       - compile-test
 
+      - store_artifacts:
+          path: ~/enzo-dev/src/enzo/out.compile
+
   docs-build:
     docker:
       - image: cimg/python:3.8.5
