--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ commands:
       - run:
           name: "Install grackle."
           command: |
-            git clone -b master https://github.com/grackle-project/grackle $HOME/grackle
+            git clone -b main https://github.com/grackle-project/grackle $HOME/grackle
             cd $HOME/grackle
             ./configure
             cd src/clib
