--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ commands:
             pip install --upgrade pip
             pip install --upgrade wheel
             pip install --upgrade setuptools
-            pip install Cython numpy h5py fastcache flake8 nose girder-client matplotlib pytest gitpython # yt
+            pip install Cython numpy h5py fastcache flake8 nose3 girder-client matplotlib pytest gitpython # yt
             # Temporary workaround to use updated answer testing from the yt dev repository
             # instead of pip until next yt point release
             git clone https://github.com/yt-project/yt
@@ -189,7 +189,7 @@ commands:
 jobs:
   test-suite:
     docker:
-      - image: cimg/python:3.11.5
+      - image: cimg/python:3.10.10
 
     resource_class: large
     working_directory: ~/enzo-dev
@@ -240,7 +240,7 @@ jobs:
 
   test-compile-options:
     docker:
-      - image: cimg/python:3.11.5
+      - image: cimg/python:3.10.10
 
     resource_class: large
     working_directory: ~/enzo-dev
@@ -271,7 +271,7 @@ jobs:
 
   docs-build:
     docker:
-      - image: cimg/python:3.11.5
+      - image: cimg/python:3.10.10
 
     working_directory: ~/enzo-dev
 
